tests/macro-tests/cases/property/property_attr_not_fn.stderr
error: expected `fn`
 --> $DIR/property_attr_not_fn.rs:4:5
  |
4 | pub struct Foo {}
  |     ^^^^^^

error: expected `fn`
 --> $DIR/property_attr_not_fn.rs:7:5
  |
7 | pub mod bar {
  |     ^^^
